--- a/html_annisa/.github/workflows/github-action.yml
+++ b/html_annisa/.github/workflows/github-action.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build and tag docker image
         run: |
-          docker build -t ${{secrets.USERNAME}}/action-percobaan:v1 -f Dockerfile .
+          docker build -t ${{secrets.USERNAME}}/action-percobaan:v1 -f dockerfile .
 
       - name: Push to Dockerhub
         run: |
